# app/routes/videos.py
@@ -1,55 +1,23 @@
-import os
-from werkzeug.utils import secure_filename
-from flask import Blueprint, jsonify, request, send_file
-from app.src.transcribe import transcribe_file
-from app.utils.files import allowed_file
-from app.utils.videos import video_to_img
+from flask import Blueprint
 
 videos = Blueprint('users/videos', __name__)
 
 @videos.route('/upload', methods=['POST'])
 def upload_video():
     """
-    Uploads a video file to the data/videos folder
+    Uploads a video file to the s3 bucket for a specific user
 
     params:
-        file: the mp4 file to upload
+        request.json (dict): A dictionary representing the JSON payload with the following structure:
+            {
+                "username": "string",
+                "video": <video file.mp4>
+            }
 
     Returns:
         A JSON response with the result of the upload
     """
-    # Check if the post request has the file part
-    if 'file' not in request.files:
-        return jsonify({'error': 'No file part'}), 400
-
-    file = request.files['file']
-
-    # If the user does not select a file, the browser submits an empty file without a filename
-    if file.filename == '':
-        return jsonify({'error': 'No selected file'}), 400
-
-    # Check if the file has an allowed extension
-    try:
-        if file and allowed_file(file.filename):
-            filename = secure_filename(file.filename)
-            filename_without_extension, _extension = os.path.splitext(filename)
-
-            # Create a unique folder for each file using the filename (without extension)
-            folder_path = os.path.join("app/data/videos/", filename_without_extension)
-            os.makedirs(folder_path, exist_ok=True)
-
-            file_path = os.path.join(folder_path, filename)
-            file.save(file_path)
-
-            transcribe_file(file_path, plain=False, vtt=True)
-            video_to_img(file.filename, folder_path)
-            # extract_faces(folder_path)
-
-            return jsonify({'message': f'File {filename} uploaded successfully'}), 201
-        else:
-            return jsonify({'error': 'File type not allowed'}), 400
-    except Exception as e:
-        return jsonify({'error': f'{e}'}), 500
+    pass
 
 @videos.route('/<username>/by-date/<date>', methods=['GET'])
 def fetch_video_by_date(username: str, date: str):
